Added Font awesome

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/81cb551153.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
@@ -28,6 +29,6 @@
     <div class="d-flex bg-warning">
       <h1>Hello world</h1>
       <p>Hello there</p>
-      <i class="fa-brands fa-instagram-square"></i>
+      <i class="fa-brands fa-instagram"></i>
   </body>
 </html>
