--- a/index.html
+++ b/index.html
@@ -20,15 +20,22 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <script src="https://kit.fontawesome.com/81cb551153.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/81cb551153.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello world</h1>
-      <p>Hello there</p>
-      <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <p>Hello, I am</p>
+      <h1>Pauline Johansson</h1>
+      <h2 class="mb-5">Front-end developer based in Sweden</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
   </body>
 </html>
