--- a/index.html
+++ b/index.html
@@ -37,5 +37,46 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
+    <p class="text-center m-5">
+      Featured project which my best project be show
+    </p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/yogurt.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Yogurt Project</h2>
+            <p class="mb-5 text-muted">Far far away, behind the mountains...</p>
+            <a href="" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">Far far away, behind the mountains...</p>
+            <a href="" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weather.png" class="img-fluid" alt="" />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/yoga.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Dictionary App</h2>
+            <p class="mb-5 text-muted">Far far away, behind the mountains...</p>
+            <a href="" class="btn btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
