--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div class="hero">
-      <p>Hello, I am</p>
+      <p>👋 Hello, I am</p>
       <h1>Pauline Johansson</h1>
       <h2 class="mb-5">Front-end developer based in Sweden</h2>
       <div>
