--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <p>Let's work together!</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding">Contact me</a>
+            <a href="" class="btn btn-branding mt-3">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
