--- a/about.html
+++ b/about.html
@@ -26,10 +26,44 @@
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Pauline is a front-end developer based in Sweden."
+    />
     <title>Pauline Johansson - About me</title>
   </head>
 
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo-shecodes-f9fa0540d113c086f61eb6e89466c0cbd24a42163b6a96d4b01da078803f53ee.png"
+            class="logo d-none d-md-block"
+            alt="Pauline Logo"
+          />
+          <img
+            src="images/logo-small.jpeg"
+            class="logo d-block d-md-none"
+            alt="Pauline Logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage"> Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html" title="About Pauline"> About</a>
+          </li>
+          <li>
+            <a href="/work.html" title="Pauline's work"> Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Pauline"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="row">
         <div class="col-md-6">
@@ -47,6 +81,63 @@
           <img src="images/lavaandme.jpg" alt="" class="img-fluid" />
         </div>
       </div>
+      <footer class="container">
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p>Let's work together!</p>
+          </div>
+          <div>
+            <a
+              href="/contact.html"
+              class="btn btn-branding mt-3"
+              title="Contact Pauline"
+              >Contact me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a
+            href="mailto:pauline@email.com"
+            class="email-link"
+            title="Email Pauline"
+            >pauline@email.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center mb-5">
+          <a
+            href="https://www.instagram.com/pauline"
+            target="_blank"
+            title="Instagram Profile"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a
+            href="https://www.github.com/pauline"
+            target="_blank"
+            title="Github Profile"
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a
+            href="https://www.facebook.com/pauline"
+            target="_blank"
+            title="Facebook Profile"
+          >
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+        <p class="text-center" mt-5>
+          This project was coded by Pauline, and it is
+          <a
+            href="https://www.github.com/paulinejohansson/portfolio-project-setup"
+            target="_blank"
+            >open-sourced.</a
+          >
+        </p>
+      </footer>
     </div>
   </body>
 </html>
