Added contact info

--- a/about.html
+++ b/about.html
@@ -100,33 +100,26 @@
         </div>
         <div class="d-flex justify-content-center mb-5">
           <a
-            href="mailto:pauline@email.com"
+            href="mailto:pauline89_johansson@hotmail.com"
             class="email-link"
             title="Email Pauline"
-            >pauline@email.com</a
+            >pauline89_johansson@hotmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
           <a
-            href="https://www.instagram.com/pauline"
+            href="https://www.instagram.com/lava.and.sannas.catventures"
             target="_blank"
             title="Instagram Profile"
           >
             <i class="fa-brands fa-instagram"></i>
           </a>
           <a
-            href="https://www.github.com/pauline"
+            href="https://www.github.com/paulinejohansson/portfolio/project/setup"
             target="_blank"
             title="Github Profile"
           >
             <i class="fa-brands fa-github"></i>
-          </a>
-          <a
-            href="https://www.facebook.com/pauline"
-            target="_blank"
-            title="Facebook Profile"
-          >
-            <i class="fa-brands fa-facebook"></i>
           </a>
         </div>
         <p class="text-center" mt-5>
