--- a/contact.html
+++ b/contact.html
@@ -69,18 +69,24 @@
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-          <a href="mailto:pauline@gmail.com">pauline@gmail.com</a>
-        </p>
-        <h3>Twitter</h3>
-        <p>
-          <a href="https://www.twitter.com/pauline" target="_blank">
-            @pauline</a
+          <a href="mailto:pauline89_johansson@hotmail.com"
+            >pauline89_johansson@hotmail.com</a
           >
         </p>
         <h3>Instagram</h3>
         <p>
-          <a href="https://www.instagram.com/Pauline.codes" target="_blank"
-            >@pauline.codes</a
+          <a
+            href="https://www.instagram.com/lava.and.sannas.catventures"
+            target="_blank"
+            >@lava.and.sannas.catventures</a
+          >
+        </p>
+        <h3>LinkedIn</h3>
+        <p>
+          <a
+            href="https://www.linkedin.com/in/pauline-johansson-a49b351a0/"
+            target="_blank"
+            >@PaulineJohansson</a
           >
         </p>
       </div>
@@ -103,10 +109,10 @@
         </div>
         <div class="d-flex justify-content-center mb-5">
           <a
-            href="mailto:pauline@email.com"
+            href="mailto:pauline89_johansson@hotmail.com"
             class="email-link"
             title="Email Pauline"
-            >pauline@email.com</a
+            >pauline89_johansson@hotmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
@@ -118,7 +124,7 @@
             <i class="fa-brands fa-instagram"></i>
           </a>
           <a
-            href="https://www.github.com/pauline"
+            href="https://www.github.com/lava.and.sannas.catventures"
             target="_blank"
             title="Github Profile"
           >
