--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
         >
       </div>
     </div>
-    <p class="text-center m-5">
-      Featured project which my best project be show
-    </p>
+    <p class="text-center m-5">Check out some of my projects below</p>
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
@@ -84,7 +82,11 @@
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Yogurt Project</h2>
-            <p class="mb-5 text-muted">Far far away, behind the mountains...</p>
+            <p class="mb-5 text-muted">
+              This project is built with HTML, CSS and JavaScript. It's built in
+              VS Code and it is my first project. This page utilizes JavaScript
+              functions to create user interaction.
+            </p>
             <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
@@ -93,7 +95,13 @@
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
-            <p class="mb-5 text-muted">Far far away, behind the mountains...</p>
+            <p class="mb-5 text-muted">
+              This was my second project ever and my final big project in
+              SheCodes Plus, which is an advanced 8-week JavaScript coding
+              workshop. This app is built with HTML, CSS, and JavaScript. I also
+              became skilled in Bootstrap, API's, real-life development
+              workflow, hosting and advanced JavaScript.
+            </p>
             <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
@@ -107,12 +115,12 @@
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yoga.png" class="img-fluid" alt="" />
+          <img src="images/dictionary.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Dictionary App</h2>
-            <p class="mb-5 text-muted">Far far away, behind the mountains...</p>
+            <p class="mb-5 text-muted">Coming soon!</p>
             <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
@@ -136,33 +144,26 @@
         </div>
         <div class="d-flex justify-content-center mb-5">
           <a
-            href="mailto:pauline@email.com"
+            href="mailto:pauline89_johansson@hotmail.com"
             class="email-link"
             title="Email Pauline"
-            >pauline@email.com</a
+            >pauline89_johansson@hotmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
           <a
-            href="https://www.instagram.com/pauline"
+            href="https://www.instagram.com/lava.and.sannas.catventures"
             target="_blank"
             title="Instagram Profile"
           >
             <i class="fa-brands fa-instagram"></i>
           </a>
           <a
-            href="https://www.github.com/pauline"
+            href="https://www.github.com/paulinejohansson/portfolio-project-setup"
             target="_blank"
             title="Github Profile"
           >
             <i class="fa-brands fa-github"></i>
-          </a>
-          <a
-            href="https://www.facebook.com/pauline"
-            target="_blank"
-            title="Facebook Profile"
-          >
-            <i class="fa-brands fa-facebook"></i>
           </a>
         </div>
         <p class="text-center" mt-5>
