Changed logo, added text, changed css

--- a/about.html
+++ b/about.html
@@ -38,14 +38,14 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo-shecodes-f9fa0540d113c086f61eb6e89466c0cbd24a42163b6a96d4b01da078803f53ee.png"
+            src="images/PaulineLogo.png"
             class="logo d-none d-md-block"
-            alt="Pauline Logo"
+            alt="Pauline-Logo"
           />
           <img
-            src="images/logo-small.jpeg"
+            src="images/PaulineLogo.png"
             class="logo d-block d-md-none"
-            alt="Pauline Logo"
+            alt="Pauline-Logo"
           />
         </a>
         <ul>
@@ -71,10 +71,14 @@
             <h1 class="mb-4">Hi, I am Pauline Johansson</h1>
             <h2 class="mb-4">Front-end developer, based in Sweden</h2>
             <p class="mb-5">
-              I love coding. I love coding. I love coding. I love coding. I love
-              coding. I love coding. I love coding.
+              I'm a mechanical design engineer who pretty much accidentally
+              stumbled across the opportunity to broaden my skills and learn how
+              to code professionally. Little did I know that I was soon to
+              completely fall in love with the feeling of creating magic from my
+              laptop. I've now several completed coding projects in my portfolio
+              and I've always another one I'm working on.
             </p>
-            <a href="" class="btn btn-branding">See my projects</a>
+            <a href="/work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
