--- a/contact.html
+++ b/contact.html
@@ -38,14 +38,14 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo-shecodes-f9fa0540d113c086f61eb6e89466c0cbd24a42163b6a96d4b01da078803f53ee.png"
+            src="images/PaulineLogo.png"
             class="logo d-none d-md-block"
-            alt="Pauline Logo"
+            alt="Pauline-Logo"
           />
           <img
-            src="images/logo-small.jpeg"
+            src="images/PaulineLogo.png"
             class="logo d-block d-md-none"
-            alt="Pauline Logo"
+            alt="Pauline-Logo"
           />
         </a>
         <ul>
@@ -117,25 +117,25 @@
         </div>
         <div class="social-links d-flex justify-content-center mb-5">
           <a
-            href="https://www.instagram.com/pauline"
+            href="https://www.instagram.com/lava.and.sannas.catventures"
             target="_blank"
             title="Instagram Profile"
           >
             <i class="fa-brands fa-instagram"></i>
           </a>
           <a
-            href="https://www.github.com/lava.and.sannas.catventures"
+            href="https://www.github.com/paulinejohansson"
             target="_blank"
             title="Github Profile"
           >
             <i class="fa-brands fa-github"></i>
           </a>
           <a
-            href="https://www.facebook.com/pauline"
+            href="https://www.linkedin.com/in/pauline-johansson-a49b351a0/"
             target="_blank"
-            title="Facebook Profile"
+            title="LinkedIn Profile"
           >
-            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-linkedin"></i>
           </a>
         </div>
         <p class="text-center" mt-5>
