--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo-shecodes-f9fa0540d113c086f61eb6e89466c0cbd24a42163b6a96d4b01da078803f53ee.png"
+            src="images/PaulineLogo.png"
             class="logo d-none d-md-block"
             alt="Pauline Logo"
           />
           <img
-            src="images/logo-small.jpeg"
+            src="images/PaulineLogo.png"
             class="logo d-block d-md-none"
             alt="Pauline Logo"
           />
@@ -77,15 +77,15 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img src="images/Project1.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Yogurt Project</h2>
+            <h2 class="mb-5">Kayaking Project</h2>
             <p class="mb-5 text-muted">
               This project is built with HTML, CSS and JavaScript. It's built in
-              VS Code and it is my first project. This page utilizes JavaScript
-              functions to create user interaction.
+              VS Code and it is my first ever coding project. This page utilizes
+              JavaScript functions to create user interaction.
             </p>
             <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
@@ -107,7 +107,7 @@
         </div>
         <div class="col d-none d-lg-block">
           <img
-            src="images/weather.png"
+            src="images/WeatherApp1.png"
             class="img-fluid"
             alt="Weather Project Review"
           />
@@ -115,12 +115,15 @@
       </div>
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="" />
+          <img src="images/DictionaryApp.png" class="img-fluid" alt="" />
         </div>
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Dictionary App</h2>
-            <p class="mb-5 text-muted">Coming soon!</p>
+            <p class="mb-5 text-muted">
+              This app is built with HTML, CSS, JacaScript and React. It's built
+              in VS Code and hosted on Netlify.
+            </p>
             <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
