--- a/work.html
+++ b/work.html
@@ -34,12 +34,12 @@
       <nav class="d-flex justify-content-between">
         <a href="/" title="Homepage">
           <img
-            src="images/logo-shecodes-f9fa0540d113c086f61eb6e89466c0cbd24a42163b6a96d4b01da078803f53ee.png"
+            src="images/PaulineLogo.png"
             class="logo d-none d-md-block"
             alt="Pauline Logo"
           />
           <img
-            src="images/logo-small.jpeg"
+            src="images/PaulineLogo"
             class="logo d-block d-md-none"
             alt="Pauline Logo"
           />
@@ -66,23 +66,44 @@
 
         <div class="row">
           <div class="col-md-6 mb-4">
-            <img src="images/yogurt.png" class="img-fluid mb-3" alt="" />
-            <h3 class="text-center m-0">Yogurt Project</h3>
+            <img src="images/Project1.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">Kayaking Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/weather.png" class="img-fluid mb-3" alt="" />
-            <h3 class="text-center m-0">Weather Project</h3>
+            <img src="images/WeatherApp1.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">
+              <a
+                href="https://glowing-brigadeiros-7b96f0.netlify.app/"
+                target="_blank"
+                title="WeatherApp1"
+                >Weather Project</a
+              >
+            </h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/dictionary.png" class="img-fluid mb-3" alt="" />
-            <h3 class="text-center m-0">Dictionary App</h3>
+            <img src="images/DictionaryApp.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">
+              <a
+                href="https://courageous-squirrel-b6ad82.netlify.app/"
+                target="_blank"
+                title="Dictionary"
+                >Dictionary App</a
+              >
+            </h3>
             <p class="text-center text-muted">Built with HTML, CSS & React</p>
           </div>
           <div class="col-md-6 mb-4">
-            <img src="images/weather.png" class="img-fluid mb-3" alt="" />
-            <h3 class="text-center m-0">Translation App</h3>
+            <img src="images/WeatherReact.png" class="img-fluid mb-3" alt="" />
+            <h3 class="text-center m-0">
+              <a
+                href="https://sage-blini-7676f1.netlify.app/"
+                target="_blank"
+                title="WeatherReact"
+                >Weather App React</a
+              >
+            </h3>
             <p class="text-center text-muted">Built with HTML, CSS & React</p>
           </div>
         </div>
