--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
               to code professionally. Little did I know that I was soon to
               completely fall in love with the feeling of creating magic from my
               laptop. I've now several completed coding projects in my portfolio
-              and I've always another one I'm working on.
+              and there is always another one I'm working on.
             </p>
             <a href="/work.html" class="btn btn-branding">See my projects</a>
           </div>
