--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
           <img
             src="images/PaulineLogo.png"
             class="logo d-none d-md-block"
-            alt="Pauline Logo"
+            alt="Pauline-Logo"
           />
           <img
             src="images/PaulineLogo.png"
             class="logo d-block d-md-none"
-            alt="Pauline Logo"
+            alt="Pauline-Logo"
           />
         </a>
         <ul>
